--- a/package.json
+++ b/package.json
@@ -10,12 +10,16 @@
   },
   "dependencies": {
     "@chess-fu/fen-parser": "^1.1.4",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-toastify": "^9.0.8"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.185",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
+    "@types/react-toastify": "^4.1.0",
     "@vitejs/plugin-react": "^2.1.0",
     "autoprefixer": "^10.4.11",
     "postcss": "^8.4.16",
