--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-toastify": "^9.0.8"
+    "react-router-dom": "^6.4.0",
+    "react-toastify": "^9.0.8",
+    "tabler-icons-react": "^1.55.0"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.185",
