--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@chess-fu/fen-parser": "^1.1.4",
     "@dnd-kit/core": "^6.0.5",
+    "@formkit/auto-animate": "^1.0.0-beta.3",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
