--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.0",
     "react-toastify": "^9.0.8",
+    "react-tooltip": "^4.2.21",
     "tabler-icons-react": "^1.55.0"
   },
   "devDependencies": {
