--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-router-dom": "^6.4.0",
     "react-toastify": "^9.0.8",
     "react-tooltip": "^4.2.21",
+    "swiper": "^8.4.4",
     "tabler-icons-react": "^1.55.0",
     "three": "^0.145.0",
     "three-stdlib": "^2.17.3"
@@ -27,6 +28,7 @@
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "@types/react-toastify": "^4.1.0",
+    "@types/swiper": "^6.0.0",
     "@types/three": "^0.144.0",
     "@vitejs/plugin-react": "^2.1.0",
     "autoprefixer": "^10.4.11",
