--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-three/fiber": "^8.8.10",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
+    "react-countdown-hook": "^1.1.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.0",
     "react-toastify": "^9.0.8",
